force-app/src/objects/fferpcore__fflib_BatchProcessDetail__c.object
<CustomObject>
    <fields>
        <fullName>fferpcore__ApexJobId__c</fullName>
        <label>Apex Job Id</label>
        <length>18</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>fferpcore__BatchProcess__c</fullName>
        <label>Batch Process</label>
        <referenceTo>fferpcore__fflib_BatchProcess__c</referenceTo>
        <relationshipLabel>Batch Process Details</relationshipLabel>
        <relationshipName>BatchProcessDetails</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>fferpcore__ChainNumber__c</fullName>
        <label>Chain Number</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>fferpcore__StatusDetail__c</fullName>
        <label>Status Detail</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>fferpcore__Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Holding</fullName>
                </value>
                <value>
                    <fullName>Queued</fullName>
                </value>
                <value>
                    <fullName>Preparing</fullName>
                </value>
                <value>
                    <fullName>Processing</fullName>
                </value>
                <value>
                    <fullName>Aborted</fullName>
                </value>
                <value>
                    <fullName>Completed</fullName>
                </value>
                <value>
                    <fullName>Failed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Foundations Batch Process Detail</label>
    <nameField>
        <displayFormat>BPD-{000000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Foundations Batch Process Details</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>